xcgui.nim


proc XComboBox_SetItemImage*(hEle: HELE; iItem: cint; iColumn: cint; hImage: HIMAGE): BOOL {.
    cdecl, importc: "XComboBox_SetItemImage", dynlib: xcgui, discardable.}

proc XComboBox_SetItemImageEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                              hImage: HIMAGE): BOOL {.cdecl,
    importc: "XComboBox_SetItemImageEx", dynlib: xcgui, discardable.}

proc XComboBox_SetItemInt*(hEle: HELE; iItem: cint; iColumn: cint; nValue: cint): BOOL {.
    cdecl, importc: "XComboBox_SetItemInt", dynlib: xcgui, discardable.}

proc XComboBox_SetItemIntEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR; nValue: cint): BOOL {.
    cdecl, importc: "XComboBox_SetItemIntEx", dynlib: xcgui, discardable.}

proc XComboBox_SetItemFloat*(hEle: HELE; iItem: cint; iColumn: cint; fFloat: cfloat): BOOL {.
    cdecl, importc: "XComboBox_SetItemFloat", dynlib: xcgui, discardable.}

proc XComboBox_SetItemFloatEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                              fFloat: cfloat): BOOL {.cdecl,
    importc: "XComboBox_SetItemFloatEx", dynlib: xcgui, discardable.}

proc XComboBox_GetItemText*(hEle: HELE; iItem: cint; iColumn: cint; pOut: ptr WCHAR;
                           nOutLen: cint): BOOL {.cdecl,
    importc: "XComboBox_GetItemText", dynlib: xcgui, discardable.}

proc XComboBox_GetItemTextEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                             pOut: ptr WCHAR; nOutLen: cint): BOOL {.cdecl,
    importc: "XComboBox_GetItemTextEx", dynlib: xcgui, discardable.}

proc XComboBox_GetItemImage*(hEle: HELE; iItem: cint; iColumn: cint): HIMAGE {.cdecl,
    importc: "XComboBox_GetItemImage", dynlib: xcgui, discardable.}

proc XComboBox_GetItemImageEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR): HIMAGE {.
    cdecl, importc: "XComboBox_GetItemImageEx", dynlib: xcgui, discardable.}

proc XComboBox_GetItemInt*(hEle: HELE; iItem: cint; iColumn: cint; pOutValue: ptr cint): BOOL {.
    cdecl, importc: "XComboBox_GetItemInt", dynlib: xcgui, discardable.}

proc XComboBox_GetItemIntEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                            pOutValue: ptr cint): BOOL {.cdecl,
    importc: "XComboBox_GetItemIntEx", dynlib: xcgui, discardable.}

proc XComboBox_GetItemFloat*(hEle: HELE; iItem: cint; iColumn: cint;
                            pOutValue: ptr cfloat): BOOL {.cdecl,
    importc: "XComboBox_GetItemFloat", dynlib: xcgui, discardable.}

proc XComboBox_GetItemFloatEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                              pOutValue: ptr cfloat): BOOL {.cdecl,
    importc: "XComboBox_GetItemFloatEx", dynlib: xcgui, discardable.}

proc XComboBox_DeleteItem*(hEle: HELE; iItem: cint): BOOL {.cdecl,
    importc: "XComboBox_DeleteItem", dynlib: xcgui, discardable.}

proc XComboBox_DeleteItemEx*(hEle: HELE; iItem: cint; nCount: cint): BOOL {.cdecl,
    importc: "XComboBox_DeleteItemEx", dynlib: xcgui, discardable.}

proc XComboBox_DeleteItemAll*(hEle: HELE) {.cdecl,
    importc: "XComboBox_DeleteItemAll", dynlib: xcgui, discardable.}

proc XComboBox_DeleteColumnAll*(hEle: HELE) {.cdecl,
    importc: "XComboBox_DeleteColumnAll", dynlib: xcgui, discardable.}

proc XComboBox_GetCount*(hEle: HELE): cint {.cdecl, importc: "XComboBox_GetCount",
    dynlib: xcgui, discardable.}

proc XComboBox_GetCountColumn*(hEle: HELE): cint {.cdecl,
    importc: "XComboBox_GetCountColumn", dynlib: xcgui, discardable.}

proc XAd_Destroy*(hAdapter: HXCGUI) {.cdecl, importc: "XAd_Destroy", dynlib: xcgui, discardable.}

proc XAdListView_Create*(): HXCGUI {.cdecl, importc: "XAdListView_Create",
                                  dynlib: xcgui, discardable.}

proc XAdListView_Group_AddColumn*(hAdapter: HXCGUI; pName: ptr WCHAR): cint {.cdecl,
    importc: "XAdListView_Group_AddColumn", dynlib: xcgui, discardable.}

proc XAdListView_Group_AddItemText*(hAdapter: HXCGUI; pValue: ptr WCHAR): cint {.
    cdecl, importc: "XAdListView_Group_AddItemText", dynlib: xcgui, discardable.}

proc XAdListView_Group_AddItemTextEx*(hAdapter: HXCGUI; pName: ptr WCHAR;
                                     pValue: ptr WCHAR): cint {.cdecl,
    importc: "XAdListView_Group_AddItemTextEx", dynlib: xcgui, discardable.}

proc XAdListView_Group_AddItemImage*(hAdapter: HXCGUI; hImage: HIMAGE): cint {.cdecl,
    importc: "XAdListView_Group_AddItemImage", dynlib: xcgui, discardable.}

proc XAdListView_Group_AddItemImageEx*(hAdapter: HXCGUI; pName: ptr WCHAR;
                                      hImage: HIMAGE): cint {.cdecl,
    importc: "XAdListView_Group_AddItemImageEx", dynlib: xcgui, discardable.}

proc XAdListView_Group_SetText*(hAdapter: HXCGUI; iGroup: cint; iColumn: cint;
                               pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdListView_Group_SetText", dynlib: xcgui, discardable.}

proc XAdListView_Group_SetTextEx*(hAdapter: HXCGUI; iGroup: cint; pName: ptr WCHAR;
                                 pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdListView_Group_SetTextEx", dynlib: xcgui, discardable.}

proc XAdListView_Group_SetImage*(hAdapter: HXCGUI; iGroup: cint; iColumn: cint;
                                hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdListView_Group_SetImage", dynlib: xcgui, discardable.}

proc XAdListView_Group_SetImageEx*(hAdapter: HXCGUI; iGroup: cint;
                                  pName: ptr WCHAR; hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdListView_Group_SetImageEx", dynlib: xcgui, discardable.}

proc XAdListView_Group_GetCount*(hAdapter: HXCGUI): cint {.cdecl,
    importc: "XAdListView_Group_GetCount", dynlib: xcgui, discardable.}

proc XAdListView_Item_GetCount*(hAdapter: HXCGUI; iGroup: cint): cint {.cdecl,
    importc: "XAdListView_Item_GetCount", dynlib: xcgui, discardable.}

proc XAdListView_Item_AddColumn*(hAdapter: HXCGUI; pName: ptr WCHAR): cint {.cdecl,
    importc: "XAdListView_Item_AddColumn", dynlib: xcgui, discardable.}
## 增加列


proc XAdListView_Item_AddItemText*(hAdapter: HXCGUI; iGroup: cint;
                                  pValue: ptr WCHAR): cint {.cdecl,
    importc: "XAdListView_Item_AddItemText", dynlib: xcgui, discardable.}

proc XAdListView_Item_AddItemTextEx*(hAdapter: HXCGUI; iGroup: cint;
                                    pName: ptr WCHAR; pValue: ptr WCHAR): cint {.
    cdecl, importc: "XAdListView_Item_AddItemTextEx", dynlib: xcgui, discardable.}

proc XAdListView_Item_AddItemImage*(hAdapter: HXCGUI; iGroup: cint; hImage: HIMAGE): cint {.
    cdecl, importc: "XAdListView_Item_AddItemImage", dynlib: xcgui, discardable.}

proc XAdListView_Item_AddItemImageEx*(hAdapter: HXCGUI; iGroup: cint;
                                     pName: ptr WCHAR; hImage: HIMAGE): cint {.
    cdecl, importc: "XAdListView_Item_AddItemImageEx", dynlib: xcgui, discardable.}

proc XAdListView_Item_SetText*(hAdapter: HXCGUI; iGroup: cint; iItem: cint;
                              iColumn: cint; pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdListView_Item_SetText", dynlib: xcgui, discardable.}

proc XAdListView_Item_SetTextEx*(hAdapter: HXCGUI; iGroup: cint; iItem: cint;
                                pName: ptr WCHAR; pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdListView_Item_SetTextEx", dynlib: xcgui, discardable.}

proc XAdListView_Item_SetImage*(hAdapter: HXCGUI; iGroup: cint; iItem: cint;
                               iColumn: cint; hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdListView_Item_SetImage", dynlib: xcgui, discardable.}

proc XAdListView_Item_SetImageEx*(hAdapter: HXCGUI; iGroup: cint; iItem: cint;
                                 pName: ptr WCHAR; hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdListView_Item_SetImageEx", dynlib: xcgui, discardable.}

proc XAdListView_Group_DeleteItem*(hAdapter: HXCGUI; iGroup: cint): BOOL {.cdecl,
    importc: "XAdListView_Group_DeleteItem", dynlib: xcgui, discardable.}

proc XAdListView_Group_DeleteAllChildItem*(hAdapter: HXCGUI; iGroup: cint) {.cdecl,
    importc: "XAdListView_Group_DeleteAllChildItem", dynlib: xcgui, discardable.}

proc XAdListView_Item_DeleteItem*(hAdapter: HXCGUI; iGroup: cint; iItem: cint): BOOL {.
    cdecl, importc: "XAdListView_Item_DeleteItem", dynlib: xcgui, discardable.}

proc XAdListView_DeleteAll*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdListView_DeleteAll", dynlib: xcgui, discardable.}

proc XAdListView_DeleteAllGroup*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdListView_DeleteAllGroup", dynlib: xcgui, discardable.}

proc XAdListView_DeleteAllItem*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdListView_DeleteAllItem", dynlib: xcgui, discardable.}

proc XAdListView_DeleteColumnGroup*(hAdapter: HXCGUI; iColumn: cint) {.cdecl,
    importc: "XAdListView_DeleteColumnGroup", dynlib: xcgui, discardable.}

proc XAdListView_DeleteColumnItem*(hAdapter: HXCGUI; iColumn: cint) {.cdecl,
    importc: "XAdListView_DeleteColumnItem", dynlib: xcgui, discardable.}

proc XAdListView_Item_GetTextEx*(hAdapter: HXCGUI; iGroup: cint; iItem: cint;
                                pName: ptr WCHAR; pOut: ptr WCHAR; nOutLen: cint): BOOL {.
    cdecl, importc: "XAdListView_Item_GetTextEx", dynlib: xcgui, discardable.}

proc XAdListView_Item_GetImageEx*(hAdapter: HXCGUI; iGroup: cint; iItem: cint;
                                 pName: ptr WCHAR): HIMAGE {.cdecl,
    importc: "XAdListView_Item_GetImageEx", dynlib: xcgui, discardable.}

proc XAdTable_Create*(): HXCGUI {.cdecl, importc: "XAdTable_Create", dynlib: xcgui, discardable.}

proc XAdTable_Sort*(hAdapter: HXCGUI; iColumn: cint; bAscending: BOOL) {.cdecl,
    importc: "XAdTable_Sort", dynlib: xcgui, discardable.}
## 排序


#~ proc XAdTable_GetItemDataType*(hAdapter: HXCGUI; iItem: cint; iColumn: cint): adapter_date_type_ {.
    #~ cdecl, importc: "XAdTable_GetItemDataType", dynlib: xcgui, discardable.}

#~ proc XAdTable_GetItemDataTypeEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR): adapter_date_type_ {.
    #~ cdecl, importc: "XAdTable_GetItemDataTypeEx", dynlib: xcgui, discardable.}

proc XAdTable_AddColumn*(hAdapter: HXCGUI; pName: ptr WCHAR): cint {.cdecl,
    importc: "XAdTable_AddColumn", dynlib: xcgui, discardable.}

proc XAdTable_SetColumn*(hAdapter: HXCGUI; pColName: ptr WCHAR): cint {.cdecl,
    importc: "XAdTable_SetColumn", dynlib: xcgui, discardable.}

proc XAdTable_AddItemText*(hAdapter: HXCGUI; pValue: ptr WCHAR): cint {.cdecl,
    importc: "XAdTable_AddItemText", dynlib: xcgui, discardable.}

proc XAdTable_AddItemTextEx*(hAdapter: HXCGUI; pName: ptr WCHAR; pValue: ptr WCHAR): cint {.
    cdecl, importc: "XAdTable_AddItemTextEx", dynlib: xcgui, discardable.}

proc XAdTable_AddItemImage*(hAdapter: HXCGUI; hImage: HIMAGE): cint {.cdecl,
    importc: "XAdTable_AddItemImage", dynlib: xcgui, discardable.}

proc XAdTable_AddItemImageEx*(hAdapter: HXCGUI; pName: ptr WCHAR; hImage: HIMAGE): cint {.
    cdecl, importc: "XAdTable_AddItemImageEx", dynlib: xcgui, discardable.}

proc XAdTable_InsertItemText*(hAdapter: HXCGUI; iItem: cint; pValue: ptr WCHAR): cint {.
    cdecl, importc: "XAdTable_InsertItemText", dynlib: xcgui, discardable.}

proc XAdTable_InsertItemTextEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                               pValue: ptr WCHAR): cint {.cdecl,
    importc: "XAdTable_InsertItemTextEx", dynlib: xcgui, discardable.}

proc XAdTable_InsertItemImage*(hAdapter: HXCGUI; iItem: cint; hImage: HIMAGE): cint {.
    cdecl, importc: "XAdTable_InsertItemImage", dynlib: xcgui, discardable.}

proc XAdTable_InsertItemImageEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                                hImage: HIMAGE): cint {.cdecl,
    importc: "XAdTable_InsertItemImageEx", dynlib: xcgui, discardable.}

proc XAdTable_SetItemText*(hAdapter: HXCGUI; iItem: cint; iColumn: cint;
                          pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdTable_SetItemText", dynlib: xcgui, discardable.}
